# practice-cpp

./: .gitignore  CMakeLists.txt  array_on_stack_test.cpp  leetcode_two_arrays_intersect.cpp  streams.cpp
HackerRank/: overload_ostream_operator.cpp
learncpp/: 4-12_prime_numbers.cpp
leetcode/: 119_pascal_triangle_II.cpp  14_longest_common_prefix .cpp  169_majority_element.cpp  205_isomorphic_strings.cpp  268_missing_number.cpp  409_longest_palindrome.cpp  448_numbers_disappeared_in_arr.cpp  496_next_greater_element_I.cpp  58_length_last_word.cpp  atm_machine.cpp  two_sum.cpp  underground_system.cpp
unspecified/: inheritance_playground.cpp  square_function.cpp  virt_functions_play.cpp
yandex-belts/red-belt/1-2/: 1-2.cpp  CMakeLists.txt
yandex-belts/red-belt/1-4/: 1-4.cpp  CMakeLists.txt
yandex-belts/red-belt/1-4-2/: 1-4-2.cpp  CMakeLists.txt
yandex-belts/red-belt/1-4-3/: 1-4-3.cpp  CMakeLists.txt  test_runner.h
yandex-belts/white-belt/1-4/: 1-4.cpp  CMakeLists.txt
yandex-belts/white-belt/1-5_eq/: 1-5_eq.cpp  CMakeLists.txt
yandex-belts/white-belt/1-5_min/: 1-5_min.cpp  CMakeLists.txt
yandex-belts/white-belt/1-7_1/: 1-7_1.cpp  CMakeLists.txt
yandex-belts/white-belt/1-7_2/: 1-7_2.cpp  CMakeLists.txt
yandex-belts/white-belt/2-1_1/: 2-1_1.cpp  CMakeLists.txt
yandex-belts/white-belt/2-1_2/: 2-1_2.cpp  CMakeLists.txt
yandex-belts/white-belt/2-1_3/: 2-1_3.cpp  CMakeLists.txt
yandex-belts/white-belt/2-2-3/: 2-2-3.cpp  CMakeLists.txt
yandex-belts/white-belt/2-2-4/: 2-2-4.cpp  CMakeLists.txt
yandex-belts/white-belt/2-2_1/: 2-2_1.cpp  CMakeLists.txt
yandex-belts/white-belt/2-2_2/: 2-2_2.cpp  CMakeLists.txt
yandex-belts/white-belt/2-4-1/: 2-4-1.cpp  CMakeLists.txt
yandex-belts/white-belt/2-4-2/: 2-4-2.cpp  CMakeLists.txt
yandex-belts/white-belt/2-4-3/: 2-4-3.cpp  CMakeLists.txt
yandex-belts/white-belt/2-5-1/: 2-5-1.cpp  CMakeLists.txt
yandex-belts/white-belt/2-5-2/: 2-5-2.cpp  CMakeLists.txt
yandex-belts/white-belt/2-5-3/: 2-5-3.cpp  CMakeLists.txt
yandex-belts/white-belt/2-5-4/: 2-5-4.cpp  CMakeLists.txt
yandex-belts/white-belt/2-6-1/: 2-6-1.cpp  CMakeLists.txt
yandex-belts/white-belt/2-6-2/: 2-6-2.cpp  CMakeLists.txt
yandex-belts/white-belt/2-6-3/: 2-6-3.cpp  CMakeLists.txt
yandex-belts/white-belt/2-6-4/: 2-6-4.cpp  CMakeLists.txt
yandex-belts/white-belt/3-1-1/: 3-1-1.cpp  CMakeLists.txt
yandex-belts/white-belt/3-1-2/: 3-1-2.cpp  CMakeLists.txt
yandex-belts/white-belt/3-4-1/: 3-4-1.cpp  CMakeLists.txt
yandex-belts/white-belt/3-4-2/: 3-4-2.cpp  CMakeLists.txt
yandex-belts/white-belt/3-4-3/: 3-4-3.cpp  CMakeLists.txt
yandex-belts/white-belt/3-6-1/: 3-6-1.cpp  CMakeLists.txt
yandex-belts/white-belt/3-6-2/: 3-6-2.cpp  CMakeLists.txt
yandex-belts/white-belt/3-6-3/: 3-6-3.cpp  CMakeLists.txt
yandex-belts/white-belt/4-1-1/: 4-1-1.cpp  CMakeLists.txt
yandex-belts/white-belt/4-1-2/: 4-1-2.cpp  CMakeLists.txt
yandex-belts/white-belt/4-1-3/: 4-1-3.cpp  CMakeLists.txt
yandex-belts/white-belt/4-2-1/: 4-2-1.cpp  CMakeLists.txt
yandex-belts/white-belt/4-2-2/: 4-2-2.cpp  CMakeLists.txt
yandex-belts/white-belt/4-2-3/: 4-2-3.cpp  CMakeLists.txt
yandex-belts/white-belt/4-2-4/: 4-2-4.cpp  CMakeLists.txt
yandex-belts/white-belt/4-2-5/: 4-2-5.cpp  CMakeLists.txt
yandex-belts/white-belt/4-3-1/: 4-3-1.cpp  CMakeLists.txt
yandex-belts/white-belt/4-4-1/: 4-4-1.cpp  CMakeLists.txt
yandex-belts/white-belt/4-4-2/: 4-4-2.cpp  CMakeLists.txt
yandex-belts/white-belt/4-4-3/: 4-4-3.cpp  CMakeLists.txt
yandex-belts/white-belt/5/: 5.cpp  CMakeLists.txt
yandex-belts/yellow-belt/1-3-1/: 1-3-1.cpp  CMakeLists.txt
yandex-belts/yellow-belt/1-3-2/: 1-3-2.cpp  CMakeLists.txt
yandex-belts/yellow-belt/1-4-1/: 1-4-1.cpp  CMakeLists.txt
yandex-belts/yellow-belt/1-4-2/: 1-4-2.cpp  CMakeLists.txt
yandex-belts/yellow-belt/1-5-1/: 1-5-1.cpp  CMakeLists.txt
yandex-belts/yellow-belt/1-5-2/: 1-5-2.cpp  CMakeLists.txt
yandex-belts/yellow-belt/2-1-1/: 2-1-1.cpp  CMakeLists.txt
yandex-belts/yellow-belt/2-4-1/: 2-4-1.cpp  CMakeLists.txt
yandex-belts/yellow-belt/2-4-2/: 2-4-2.cpp  CMakeLists.txt
yandex-belts/yellow-belt/2-4-3/: 2-4-3.cpp  CMakeLists.txt
yandex-belts/yellow-belt/2-4-4/: 2-4-4.cpp  CMakeLists.txt
yandex-belts/yellow-belt/3-2-1/: 3-2-1.cpp  CMakeLists.txt
yandex-belts/yellow-belt/3-3-3/: CMakeLists.txt  bus_manager.cpp  bus_manager.h  main.cpp  query.cpp  query.h  responces.cpp  responses.cpp  responses.h
yandex-belts/yellow-belt/4-1-1/: 4-1-1.cpp  CMakeLists.txt
yandex-belts/yellow-belt/4-1-2/: 4-1-2.cpp  CMakeLists.txt
yandex-belts/yellow-belt/4-1-3/: 4-1-3.cpp  CMakeLists.txt
yandex-belts/yellow-belt/4-2-1/: 4-2-1.cpp  CMakeLists.txt
yandex-belts/yellow-belt/4-2-2/: 4-2-2.cpp  CMakeLists.txt
yandex-belts/yellow-belt/4-2-3/: 4-2-3.cpp  CMakeLists.txt
yandex-belts/yellow-belt/4-2-4/: 4-2-4.cpp  CMakeLists.txt
yandex-belts/yellow-belt/4-2-5/: 4-2-5.cpp  CMakeLists.txt
yandex-belts/yellow-belt/4-3-1/: 4-3-1.cpp  CMakeLists.txt
yandex-belts/yellow-belt/4-3-2/: 4-3-2.cpp  CMakeLists.txt
yandex-belts/yellow-belt/4-4-1/: 4-4-1.cpp
yandex-belts/yellow-belt/4-4-2/: CMakeLists.txt
yandex-belts/yellow-belt/4-4-3/: 4-4-3.cpp  CMakeLists.txt
yandex-belts/yellow-belt/4-4-4/: 4-4-4.cpp  CMakeLists.txt
yandex-belts/yellow-belt/4-4-5/: 4-4-5.cpp  CMakeLists.txt
yandex-belts/yellow-belt/4-4-6/: 4-4-6.cpp  CMakeLists.txt
yandex-belts/yellow-belt/5-1-1/: 5-1-1.cpp  CMakeLists.txt
yandex-belts/yellow-belt/5-2-1/: 5-2-1.cpp  CMakeLists.txt
yandex-belts/yellow-belt/5-2-2/: 5-2-2.cpp  CMakeLists.txt
yandex-belts/yellow-belt/5-2-3/: 5-2-3.cpp  CMakeLists.txt
yandex-belts/yellow-belt/6/: CMakeLists.txt  condition_parser_test.cpp  database.cpp  database.h  date.cpp  date.h  main.cpp  node.cpp  node.h  test_runner.h
yandex-belts/yellow-belt/phone_number/: CMakeLists.txt  phone_number.cpp  phone_number.h
